[gd_scene load_steps=74 format=2]

[ext_resource path="res://assets/idle/idle down1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://assets/idle/idle down2.png" type="Texture" id=3]
[ext_resource path="res://assets/idle/idle down4.png" type="Texture" id=4]
[ext_resource path="res://assets/idle/idle left2.png" type="Texture" id=5]
[ext_resource path="res://assets/idle/idle down3.png" type="Texture" id=6]
[ext_resource path="res://assets/idle/idle left3.png" type="Texture" id=7]
[ext_resource path="res://assets/idle/idle right4.png" type="Texture" id=8]
[ext_resource path="res://assets/idle/idle left1.png" type="Texture" id=9]
[ext_resource path="res://assets/idle/idle left4.png" type="Texture" id=10]
[ext_resource path="res://assets/idle/idle right1.png" type="Texture" id=11]
[ext_resource path="res://assets/idle/idle right2.png" type="Texture" id=12]
[ext_resource path="res://assets/idle/idle right3.png" type="Texture" id=13]
[ext_resource path="res://assets/idle/idle up1.png" type="Texture" id=14]
[ext_resource path="res://assets/idle/idle up2.png" type="Texture" id=15]
[ext_resource path="res://assets/idle/idle up3.png" type="Texture" id=16]
[ext_resource path="res://assets/idle/idle up4.png" type="Texture" id=17]
[ext_resource path="res://assets/walk/walk down2.png" type="Texture" id=18]
[ext_resource path="res://assets/walk/walk down1.png" type="Texture" id=19]
[ext_resource path="res://assets/walk/walk left3.png" type="Texture" id=20]
[ext_resource path="res://assets/walk/walk left2.png" type="Texture" id=21]
[ext_resource path="res://assets/walk/walk left4.png" type="Texture" id=22]
[ext_resource path="res://assets/walk/walk right1.png" type="Texture" id=23]
[ext_resource path="res://assets/walk/walk right3.png" type="Texture" id=24]
[ext_resource path="res://assets/walk/walk right4.png" type="Texture" id=25]
[ext_resource path="res://assets/walk/walk up1.png" type="Texture" id=26]
[ext_resource path="res://assets/walk/walk left1.png" type="Texture" id=27]
[ext_resource path="res://assets/walk/walk up3.png" type="Texture" id=28]
[ext_resource path="res://assets/walk/walk up4.png" type="Texture" id=29]
[ext_resource path="res://assets/walk/walk up2.png" type="Texture" id=30]
[ext_resource path="res://assets/walk/walk right2.png" type="Texture" id=31]
[ext_resource path="res://assets/walk/walk down3.png" type="Texture" id=32]
[ext_resource path="res://assets/walk/walk down4.png" type="Texture" id=33]
[ext_resource path="res://assets/attack/attack left1.png" type="Texture" id=34]
[ext_resource path="res://assets/attack/attack down1.png" type="Texture" id=35]
[ext_resource path="res://assets/attack/attack left2.png" type="Texture" id=36]
[ext_resource path="res://assets/attack/attack left3.png" type="Texture" id=37]
[ext_resource path="res://assets/attack/attack left4.png" type="Texture" id=38]
[ext_resource path="res://assets/attack/attack right1.png" type="Texture" id=39]
[ext_resource path="res://assets/attack/attack right2.png" type="Texture" id=40]
[ext_resource path="res://assets/attack/attack right3.png" type="Texture" id=41]
[ext_resource path="res://assets/attack/attack right4.png" type="Texture" id=42]
[ext_resource path="res://assets/attack/attack down2.png" type="Texture" id=43]
[ext_resource path="res://assets/attack/attack down4.png" type="Texture" id=44]
[ext_resource path="res://assets/attack/attack down3.png" type="Texture" id=45]
[ext_resource path="res://assets/attack/attack up1.png" type="Texture" id=46]
[ext_resource path="res://assets/attack/attack up2.png" type="Texture" id=47]
[ext_resource path="res://assets/attack/attack up3.png" type="Texture" id=48]
[ext_resource path="res://assets/attack/attack up4.png" type="Texture" id=49]
[ext_resource path="res://assets/death/death4.png" type="Texture" id=50]
[ext_resource path="res://assets/death/death1.png" type="Texture" id=51]
[ext_resource path="res://assets/death/death3.png" type="Texture" id=52]
[ext_resource path="res://assets/death/death2.png" type="Texture" id=53]
[ext_resource path="res://assets/swim/swim down2.png" type="Texture" id=54]
[ext_resource path="res://assets/swim/swim down4.png" type="Texture" id=55]
[ext_resource path="res://assets/swim/swim right3.png" type="Texture" id=56]
[ext_resource path="res://assets/swim/swim right1.png" type="Texture" id=57]
[ext_resource path="res://assets/swim/swim left1.png" type="Texture" id=58]
[ext_resource path="res://assets/swim/swim left4.png" type="Texture" id=59]
[ext_resource path="res://assets/swim/swim up4.png" type="Texture" id=60]
[ext_resource path="res://assets/swim/swim up3.png" type="Texture" id=61]
[ext_resource path="res://assets/swim/swim right2.png" type="Texture" id=62]
[ext_resource path="res://assets/swim/swim up1.png" type="Texture" id=63]
[ext_resource path="res://assets/swim/swim left3.png" type="Texture" id=64]
[ext_resource path="res://assets/swim/swim down3.png" type="Texture" id=65]
[ext_resource path="res://assets/swim/swim up2.png" type="Texture" id=66]
[ext_resource path="res://assets/swim/swim right4.png" type="Texture" id=67]
[ext_resource path="res://assets/swim/swim left2.png" type="Texture" id=68]
[ext_resource path="res://assets/swim/swim down1.png" type="Texture" id=69]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 44 ) ],
"loop": false,
"name": "attack_down",
"speed": 15.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": false,
"name": "attack_left",
"speed": 15.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": false,
"name": "attack_right",
"speed": 15.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": false,
"name": "attack_up",
"speed": 15.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 50 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 69 ), ExtResource( 54 ), ExtResource( 65 ), ExtResource( 55 ) ],
"loop": true,
"name": "swimm_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 68 ), ExtResource( 64 ), ExtResource( 59 ) ],
"loop": true,
"name": "swimm_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 62 ), ExtResource( 56 ), ExtResource( 67 ) ],
"loop": true,
"name": "swimm_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 66 ), ExtResource( 61 ), ExtResource( 60 ) ],
"loop": true,
"name": "swimm_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 31 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 4.9375 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.0

[sub_resource type="CircleShape2D" id=4]
radius = 44.0114

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.49984, -6.49984 )
scale = Vector2( 3.54688, 3.54688 )
frames = SubResource( 1 )
animation = "attack_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.99984, 9.56266 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -0.49984, -0.49984 )
current = true
limit_left = 0
limit_top = 0
limit_right = 3200
limit_bottom = 3200
limit_smoothed = true
smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -0.49984, -0.49984 )
collision_layer = 2
collision_mask = 6

[node name="PlayerHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, -7 )
shape = SubResource( 3 )

[node name="SwordHitbox" type="Area2D" parent="."]
position = Vector2( 1.50016, -0.49984 )
collision_layer = 2
collision_mask = 7

[node name="Hitbox" type="CollisionShape2D" parent="SwordHitbox"]
position = Vector2( 25, 0 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
